<resources>
    <string name="app_name">Rick And Morty App</string>
    <string name="logo_name">Rick And Morty App Logo</string>
    <string name="un_str">UNKNOWN</string>
    <string name="locations_and_characters">Locations and Characters</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="status">Status:</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="episodes">Episodes:</string>
    <string name="created_at">Created at (in API):</string>
    <string name="type_for_location">Type: </string>
    <string name="dimension_for_location">Dimension: </string>
    <string name="created_for_location">Created: </string>
    <string name="last_known_location">Last known location:</string>
    <string name="first_seen_in">First seen in:</string>
    <string name="type">Type:</string>
    <string name="welcome">Welcome!</string>
    <string name="hello">Hello!</string>
    <string name="no_data">No characters to display!</string>
    <string name="oops">OOPS!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="retry_button">Retry</string>

    //image name
    <string name="image_character">Character</string>
    <string name="image_location">Location</string>
    <string name="image_error">Error!</string>
    <string name="image_empty">Empty!</string>
    <string name="image_gender">Gender</string>
    <string name="image_status">Status</string>
    <string name="image_no_network">No Network</string>

    //image button name
    <string name="image_button_location">Locations</string>
    <string name="image_button_character">Characters</string>
    <string name="image_button_prev">Prev</string>
    <string name="download">Download</string>
    <string name="start_download">Downloading Started</string>
</resources>