<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/app_color_6">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/baseline_signal_wifi_off"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:contentDescription="@string/image_no_network">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/app_color_2">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/app_color_2">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_check_your_connection"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/app_color_2">
    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAllCaps="true"
        android:text="@string/retry_button"
        android:backgroundTint="@color/app_color">
    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>