<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.LocationDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color_3"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/progress_bar_for_location_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progressDrawable="@drawable/style_progress_bar">
    </ProgressBar>

    <LinearLayout
        android:id="@+id/location_detail_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/prev_image_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_navigate_before"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:contentDescription="@string/image_button_prev">
            </ImageButton>

            <TextView
                android:layout_weight="1"
                android:id="@+id/name_of_location_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_book"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/dark_text_color"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="30sp"
                tools:targetApi="o">
            </TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_location_on"
                android:scaleType="fitCenter"
                android:contentDescription="@string/image_location">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:background="@drawable/style_character_or_location_detail">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/type_for_location"
                android:fontFamily="@font/avenir_book"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/dark_text_color">
            </TextView>

            <TextView
                android:layout_weight="1"
                android:id="@+id/type_of_location_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_book"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/dark_text_color">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:background="@drawable/style_character_or_location_detail">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/dimension_for_location"
                android:fontFamily="@font/avenir_book"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/dark_text_color">
            </TextView>

            <TextView
                android:layout_weight="1"
                android:id="@+id/dimension_of_location_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_book"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/dark_text_color">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:background="@drawable/style_character_or_location_detail">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/created_for_location"
                android:fontFamily="@font/avenir_book"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/dark_text_color">
            </TextView>

            <TextView
                android:layout_weight="1"
                android:id="@+id/created_of_location_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_book"
                android:textSize="20sp"
                android:textStyle="normal"
                android:textColor="@color/dark_text_color">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/character_list_in_location_detail_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/character_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/characters"
                android:fontFamily="@font/avenir_book"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/dark_text_color"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:singleLine="true"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeMaxTextSize="30sp"
                tools:targetApi="o">
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_list_in_location_detail_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progress_bar_for_characters_list"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:progressDrawable="@drawable/style_progress_bar">
            </ProgressBar>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/character_list_empty_in_location_detail_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_color_3"
                android:src="@drawable/no_data"
                android:scaleType="fitCenter"
                android:contentDescription="@string/image_empty"
                android:layout_gravity="center">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textStyle="bold"
                android:fontFamily="@font/avenir_book"
                android:textSize="30sp"
                android:textColor="@color/dark_text_color"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>