<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.CharacterDetailActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color_3"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/progress_bar_for_actor_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progressDrawable="@drawable/style_progress_bar">
    </ProgressBar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/prev_image_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_navigate_before"
                    android:scaleType="fitCenter"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_button_prev">
                </ImageButton>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/name_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text_color"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="15sp"
                    android:autoSizeMaxTextSize="30sp"
                    tools:targetApi="o">
                </TextView>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/character"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/image_character">
                </ImageView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="275dp"
                android:layout_height="275dp"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_of_character_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image_character"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">
                    </ImageView>

                    <ImageButton
                        android:id="@+id/download_character"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_download"
                        android:background="@color/app_color_6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        android:contentDescription="@string/download">
                    </ImageButton>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:background="@drawable/style_character_or_location_detail">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text_color">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/status_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/dark_text_color">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:background="@drawable/style_character_or_location_detail">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/species"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text_color">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/species_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/dark_text_color">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:background="@drawable/style_character_or_location_detail">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text_color">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/gender_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/dark_text_color">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:background="@drawable/style_character_or_location_detail">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:text="@string/origin"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text_color">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/origin_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/dark_text_color">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:background="@drawable/style_character_or_location_detail">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text_color">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/location_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/dark_text_color">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:background="@drawable/style_character_or_location_detail">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/episodes"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text_color">
                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_weight="1"
                    android:id="@+id/episodes_list_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:background="@drawable/style_character_or_location_detail">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/created_at"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_text_color">
                </TextView>

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/created_at_of_character_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_book"
                    android:textSize="22sp"
                    android:textStyle="normal"
                    android:textColor="@color/dark_text_color">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>